@@ -2,79 +2,71 @@ package ru.practicum.shareit.item;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Isolation;
-import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.shareit.exception.NotFoundException;
-import ru.practicum.shareit.item.dto.ItemCreateDto;
 import ru.practicum.shareit.item.dto.ItemDto;
-import ru.practicum.shareit.item.dto.ItemUpdateDto;
 import ru.practicum.shareit.item.entity.Item;
 import ru.practicum.shareit.user.UserRepository;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ItemService {
 
-    private final ItemRepository itemRepository;
+    private final ItemRepository repository;
     private final UserRepository userRepository;
     private final ItemMapper mapper;
 
-    @Transactional(isolation = Isolation.REPEATABLE_READ)
-    public ItemDto createItem(ItemCreateDto itemDto, long userId) {
-        if (!userRepository.existsById(userId)) {
-            throw new NotFoundException("There is no user with id=" + userId);
+    public ItemDto create(long ownerId, ItemDto dto) {
+        validateUser(ownerId);
+        Item item = mapper.fromDto(dto, ownerId);
+        return mapper.toDto(repository.save(item));
+    }
+
+    public ItemDto update(long ownerId, long itemId, ItemDto patch) {
+        Item item = repository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Item not found"));
+        if (item.getOwnerId() != ownerId) {
+            throw new NotFoundException("Only owner can update the item");
         }
-        Item saved = itemRepository.save(mapper.toItem(itemDto, userId));
-        return mapper.toItemDto(saved);
+        mapper.update(item, patch);
+        return mapper.toDto(repository.save(item));
     }
 
-    @Transactional(isolation = Isolation.REPEATABLE_READ)
-    public ItemDto update(ItemUpdateDto itemDto, long userId, long itemId) {
-        Item toUpdate = itemRepository.findById(itemId)
-                .orElseThrow(() -> new NotFoundException("There is no item with id=" + itemId));
-        if (toUpdate.getOwner().getId() != userId) {
-            throw new NotFoundException("Can't change item's owner");
-        }
-        updateNotNullFields(itemDto, toUpdate);
-        itemRepository.save(toUpdate);
-        return mapper.toItemDto(toUpdate);
+    public ItemDto getById(long itemId) {
+        Item item = repository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Item not found"));
+        return mapper.toDto(item);
     }
 
-    @Transactional(readOnly = true)
-    public ItemDto getItemById(long id, long userId) {
-        Item item = itemRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("There is no item with id=" + id));
-        return mapper.toItemDto(item);
+    public List<ItemDto> getByOwner(long ownerId) {
+        return repository.findByOwnerId(ownerId).stream()
+                .map(mapper::toDto)
+                .collect(Collectors.toList());
     }
 
-    @Transactional(readOnly = true)
-    public List<ItemDto> getItemByUserId(long userId) {
-        return itemRepository.findByOwnerId(userId).stream()
-                .map(mapper::toItemDto)
-                .toList();
-    }
-
-    public List<ItemDto> searchByText(String text, long userId) {
+    public List<ItemDto> search(String text) {
         if (text == null || text.isBlank()) {
-            return Collections.emptyList();
+            return List.of(); // пустой запрос — пустой результат
         }
-        return itemRepository.findByText(text).stream()
-                .map(mapper::toItemDto)
-                .toList();
+
+        String lower = text.toLowerCase();
+
+        return repository.findAll().stream()
+                .filter(item -> Boolean.TRUE.equals(item.getAvailable())) // только доступные
+                .filter(item -> {
+                    String name = item.getName() != null ? item.getName().toLowerCase() : "";
+                    String desc = item.getDescription() != null ? item.getDescription().toLowerCase() : "";
+                    return name.contains(lower) || desc.contains(lower);
+                })
+                .map(mapper::toDto)
+                .collect(Collectors.toList());
     }
 
-    private static void updateNotNullFields(ItemUpdateDto itemDto, Item toUpdate) {
-        if (itemDto.getName() != null) {
-            toUpdate.setName(itemDto.getName());
-        }
-        if (itemDto.getDescription() != null) {
-            toUpdate.setDescription(itemDto.getDescription());
-        }
-        if (itemDto.getAvailable() != null) {
-            toUpdate.setAvailable(itemDto.getAvailable());
+    private void validateUser(long id) {
+        if (userRepository.findById(id).isEmpty()) {
+            throw new NotFoundException("User not found");
         }
     }
 }
